<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="607dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/display_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        <TextView
            android:id="@+id/baseView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/baseView"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        <RadioGroup
            android:id="@+id/bases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/base1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/base1" />

            <RadioButton
                android:id="@+id/base2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/base2" />

            <RadioButton
                android:id="@+id/base3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/base3" />
        </RadioGroup>

        <TextView
            android:id="@+id/cheeseView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cheeseView"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        <CheckBox
            android:id="@+id/cheese1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/cheese1" />

        <CheckBox
            android:id="@+id/cheese2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/cheese2" />

        <TextView
            android:id="@+id/ingredientsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ingredientsView"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        <CheckBox
            android:id="@+id/ing1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/ing1" />

        <CheckBox
            android:id="@+id/ing2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ing2" />

        <CheckBox
            android:id="@+id/ing3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ing3" />

        <CheckBox
            android:id="@+id/ing4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ing4" />

        <TextView
            android:id="@+id/display_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quantityView"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <SeekBar
            android:id="@+id/seek_qty"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/btn_order"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_order" />

            <Button
                android:id="@+id/btn_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_summary"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>